--- a/index.html
+++ b/index.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./src/style.css">
+    <link rel="stylesheet" href="./src/style.css" />
     <title>Excalibur + Vite</title>
   </head>
   <body>
+    <main>
+      <div id="game-container">
+        <canvas id="game"></canvas>
+      </div>
+      <div id="ui">
+        <div class="one" id="one"></div>
+        <div class="two" id="two"></div>
+        <div class="three" id="three"></div>
+        <div class="four" id="four"></div>
+      </div>
+    </main>
     <script type="module" src="./src/main.ts"></script>
   </body>
 </html>
