--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
   <body>
     <main>
       <div id="game-container">
+        <div id="left-ui">
+          <div class="one" id="one"></div>
+          <div class="three" id="three"></div>
+        </div>
         <canvas id="game"></canvas>
-      </div>
-      <div id="ui">
-        <div class="one" id="one"></div>
-        <div class="two" id="two"></div>
-        <div class="three" id="three"></div>
-        <div class="four" id="four"></div>
+        <div id="right-ui">
+          <div class="two" id="two"></div>
+          <div class="four" id="four"></div>
+        </div>
       </div>
     </main>
     <script type="module" src="./src/main.ts"></script>
