--- a/index.html
+++ b/index.html
@@ -11,13 +11,33 @@
     <main>
       <div id="game-container">
         <div id="left-ui">
-          <div class="one" id="one"></div>
-          <div class="three" id="three"></div>
+          <div class="one" id="one">
+            <select name="move1" id="move-select1">
+              <option value="forward">forward</option>
+              <option value="backward">backward</option>
+            </select>
+          </div>
+          <div class="three" id="three">
+            <select name="move3" id="move-select3">
+              <option value="forward">forward</option>
+              <option value="backward">backward</option>
+            </select>
+          </div>
         </div>
         <canvas id="game"></canvas>
         <div id="right-ui">
-          <div class="two" id="two"></div>
-          <div class="four" id="four"></div>
+          <div class="two" id="two">
+            <select name="move2" id="move-select2">
+              <option value="forward">forward</option>
+              <option value="backward">backward</option>
+            </select>
+          </div>
+          <div class="four" id="four">
+            <select name="move4" id="move-select4">
+              <option value="forward">forward</option>
+              <option value="backward">backward</option>
+            </select>
+          </div>
         </div>
       </div>
     </main>
