Health and bullet collisions

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   </head>
   <body>
     <main>
+      <div id="health-bar">
+        <div id="health-bar-inner"></div>
+      </div>
       <div id="game-container">
         <div id="left-ui">
           <div class="one" id="one">
