Adding some moves

--- a/index.html
+++ b/index.html
@@ -18,12 +18,16 @@
             <select name="move1" id="move-select1">
               <option value="forward">forward</option>
               <option value="backward">backward</option>
+              <option value="moveToMouse">moveToMouse</option>
+              <option value="forward-aoe">forward-aoe</option>
             </select>
           </div>
           <div class="three" id="three">
             <select name="move3" id="move-select3">
               <option value="forward">forward</option>
               <option value="backward">backward</option>
+              <option value="moveToMouse">moveToMouse</option>
+              <option value="forward-aoe">forward-aoe</option>
             </select>
           </div>
         </div>
@@ -33,12 +37,16 @@
             <select name="move2" id="move-select2">
               <option value="forward">forward</option>
               <option value="backward">backward</option>
+              <option value="moveToMouse">moveToMouse</option>
+              <option value="forward-aoe">forward-aoe</option>
             </select>
           </div>
           <div class="four" id="four">
             <select name="move4" id="move-select4">
               <option value="forward">forward</option>
               <option value="backward">backward</option>
+              <option value="moveToMouse">moveToMouse</option>
+              <option value="forward-aoe">forward-aoe</option>
             </select>
           </div>
         </div>
