--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <div id="health-bar">
         <div id="health-bar-inner"></div>
       </div>
+      <div id="score-display">Score:&nbsp;<span id="score-value">0</span></div>
       <div id="game-container">
         <div id="left-ui">
           <div class="one" id="one">
