--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
               <option value="backward">backward</option>
               <option value="moveToMouse">moveToMouse</option>
               <option value="forward-aoe">forward-aoe</option>
+              <option value="forward-cone">forward-cone</option>
             </select>
           </div>
           <div class="three" id="three">
@@ -29,6 +30,7 @@
               <option value="backward">backward</option>
               <option value="moveToMouse">moveToMouse</option>
               <option value="forward-aoe">forward-aoe</option>
+              <option value="forward-cone">forward-cone</option>
             </select>
           </div>
         </div>
@@ -40,6 +42,7 @@
               <option value="backward">backward</option>
               <option value="moveToMouse">moveToMouse</option>
               <option value="forward-aoe">forward-aoe</option>
+              <option value="forward-cone">forward-cone</option>
             </select>
           </div>
           <div class="four" id="four">
@@ -48,6 +51,7 @@
               <option value="backward">backward</option>
               <option value="moveToMouse">moveToMouse</option>
               <option value="forward-aoe">forward-aoe</option>
+              <option value="forward-cone">forward-cone</option>
             </select>
           </div>
         </div>
