--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
         <div id="health-bar-inner"></div>
       </div>
       <div id="score-display">Score:&nbsp;<span id="score-value">0</span></div>
+      <div id="consonance-progress-container">
+        <div id="consonance-progress-bar">
+          <div id="consonance-progress-fill"></div>
+        </div>
+        <div id="consonance-progress-label">0</div>
+      </div>
       <div id="game-container">
         <div id="left-ui">
           <div class="one" id="one">
