--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
               <option value="moveToMouse">moveToMouse</option>
               <option value="forward-aoe">forward-aoe</option>
               <option value="forward-cone">forward-cone</option>
+              <option value="forward-beam">forward-beam</option>
             </select>
           </div>
           <div class="three" id="three">
@@ -37,6 +38,7 @@
               <option value="moveToMouse">moveToMouse</option>
               <option value="forward-aoe">forward-aoe</option>
               <option value="forward-cone">forward-cone</option>
+              <option value="forward-beam">forward-beam</option>
             </select>
           </div>
         </div>
@@ -49,6 +51,7 @@
               <option value="moveToMouse">moveToMouse</option>
               <option value="forward-aoe">forward-aoe</option>
               <option value="forward-cone">forward-cone</option>
+              <option value="forward-beam">forward-beam</option>
             </select>
           </div>
           <div class="four" id="four">
@@ -58,6 +61,7 @@
               <option value="moveToMouse">moveToMouse</option>
               <option value="forward-aoe">forward-aoe</option>
               <option value="forward-cone">forward-cone</option>
+              <option value="forward-beam">forward-beam</option>
             </select>
           </div>
         </div>
