--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
               <option value="forward-aoe">forward-aoe</option>
               <option value="forward-cone">forward-cone</option>
               <option value="forward-beam">forward-beam</option>
+              <option value="bomb">bomb</option>
             </select>
           </div>
           <div class="three" id="three">
@@ -39,6 +40,7 @@
               <option value="forward-aoe">forward-aoe</option>
               <option value="forward-cone">forward-cone</option>
               <option value="forward-beam">forward-beam</option>
+              <option value="bomb">bomb</option>
             </select>
           </div>
         </div>
@@ -52,6 +54,7 @@
               <option value="forward-aoe">forward-aoe</option>
               <option value="forward-cone">forward-cone</option>
               <option value="forward-beam">forward-beam</option>
+              <option value="bomb">bomb</option>
             </select>
           </div>
           <div class="four" id="four">
@@ -62,6 +65,7 @@
               <option value="forward-aoe">forward-aoe</option>
               <option value="forward-cone">forward-cone</option>
               <option value="forward-beam">forward-beam</option>
+              <option value="bomb">bomb</option>
             </select>
           </div>
         </div>
