--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       <div id="health-bar">
         <div id="health-bar-inner"></div>
       </div>
+      <div id="helper-text">
+        <div>Press X on first beat to freeze</div>
+        <div>Press W to toggle walking</div>
+      </div>
       <div id="score-display">Score:&nbsp;<span id="score-value">0</span></div>
       <div id="consonance-progress-container">
         <div id="consonance-progress-bar">
