--- a/index.html
+++ b/index.html
@@ -27,23 +27,17 @@
         <div id="left-ui">
           <div class="one" id="one">
             <select name="move1" id="move-select1">
-              <option value="forward">forward</option>
-              <option value="backward">backward</option>
-              <option value="moveToMouse">moveToMouse</option>
-              <option value="forward-aoe">forward-aoe</option>
-              <option value="forward-cone">forward-cone</option>
-              <option value="forward-beam">forward-beam</option>
+              <option value="aoe">aoe</option>
+              <option value="cone">cone</option>
+              <option value="beam">beam</option>
               <option value="bomb">bomb</option>
             </select>
           </div>
           <div class="three" id="three">
             <select name="move3" id="move-select3">
-              <option value="forward">forward</option>
-              <option value="backward">backward</option>
-              <option value="moveToMouse">moveToMouse</option>
-              <option value="forward-aoe">forward-aoe</option>
-              <option value="forward-cone">forward-cone</option>
-              <option value="forward-beam">forward-beam</option>
+              <option value="aoe">aoe</option>
+              <option value="cone">cone</option>
+              <option value="beam">beam</option>
               <option value="bomb">bomb</option>
             </select>
           </div>
@@ -52,23 +46,17 @@
         <div id="right-ui">
           <div class="two" id="two">
             <select name="move2" id="move-select2">
-              <option value="forward">forward</option>
-              <option value="backward">backward</option>
-              <option value="moveToMouse">moveToMouse</option>
-              <option value="forward-aoe">forward-aoe</option>
-              <option value="forward-cone">forward-cone</option>
-              <option value="forward-beam">forward-beam</option>
+              <option value="aoe">aoe</option>
+              <option value="cone">cone</option>
+              <option value="beam">beam</option>
               <option value="bomb">bomb</option>
             </select>
           </div>
           <div class="four" id="four">
             <select name="move4" id="move-select4">
-              <option value="forward">forward</option>
-              <option value="backward">backward</option>
-              <option value="moveToMouse">moveToMouse</option>
-              <option value="forward-aoe">forward-aoe</option>
-              <option value="forward-cone">forward-cone</option>
-              <option value="forward-beam">forward-beam</option>
+              <option value="aoe">aoe</option>
+              <option value="cone">cone</option>
+              <option value="beam">beam</option>
               <option value="bomb">bomb</option>
             </select>
           </div>
