--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
       <div id="health-bar-inner"></div>
     </div>
     <div id="helper-text">
-      <div>Press X on first beat to freeze</div>
-      <div>Press W to toggle walking</div>
+      <div>WASD to move</div>
     </div>
     <div id="score-display">Score:&nbsp;<span id="score-value">0</span></div>
     <script type="module" src="./src/main.ts"></script>
