Sprint on space

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </div>
     <div id="helper-text">
       <div>WASD to move</div>
+      <div>Space on the beat to sprint</div>
     </div>
     <div id="score-display">Score:&nbsp;<span id="score-value">0</span></div>
     <script type="module" src="./src/main.ts"></script>
