--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <div id="helper-text">
       <div>WASD to move</div>
       <div>Space on the beat to sprint</div>
+      <div>Left click on blue notes to freeze</div>
     </div>
     <div id="score-display">Score:&nbsp;<span id="score-value">0</span></div>
     <script type="module" src="./src/main.ts"></script>
