Auto aim beam and joystick support

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       <div id="health-bar-inner"></div>
     </div>
     <div id="helper-text">
-      <div>WASD to move</div>
-      <div>Space on the beat to sprint</div>
-      <div>Left click on blue notes to freeze</div>
+      <div>WASD or Left Stick to move</div>
+      <div>L or Right Trigger on the beat to sprint</div>
+      <div>K or Left Trigger on the beat to freeze</div>
     </div>
     <div id="score-display">Score:&nbsp;<span id="score-value">0</span></div>
     <script type="module" src="./src/main.ts"></script>
